--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js", 
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -13,10 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
-
